[package]
name = "alert-deleter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["env", "derive"] }
ctrlc = "3.4.5"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.99.0", features = ["runtime", "derive"] }
kube-leader-election = "0.40.0"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
simple_logger = "5.0.0"
tokio = { version = "1.44.1", features = ["full"] }
