[package]
name = "alert-actor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["env", "derive"] }
ctrlc = "3.4.7"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
kube-leader-election = "0.41.0"
log = "0.4.27"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
simple_logger = "5.0.0"
tokio = { version = "1.47.1", features = ["full"] }
openssl = { version = "0.10.73", features = ["vendored"] }
